[2014-??-??] - Version 1.0
	* Added Sheet::setRightToLeft() and Sheet::setRightToLeft() methods that specifies whether the sheet in is "right to left" display mode
	* Added Book::isTemplate() and Book::setTemplate() methods for detecting xltx files and converting from xlsx to xltx and vice versa
	* Fixed compilation with LibXL 3.5.4
	* Added optional scope parameter to setNamedRange()/delNamedRange()/getNamedRange() methods
	* Updated getNamedRange()/getIndexRange() methods to retrieve hidden state
	* Added parameter to readRow/readCol/read methods that specifiy whether to parse formula or its value.
	* Added ExcelBook::packDateValues() method for generating Excel date value
	* Added ExcelBook::setPrintArea() method for setting print area
	* Fixed parsing of non-numeric formulas inside read() method
	* Fixed parameter processing inside ExcelSheet::getVerPageBreak()/getHorPageBreak() methods
	* Fixed parameter order inside ExcelSheet::getNamedRange()/getIndexRange() methods
	* Fixed return value processing inside ExcelBook::setActiveSheet() method

[2013-11-18] - Version 0.9.9
	* Added ExcelBook::IsDate1904/ExcelBook::ISetDate1904 methods to set/retrieve base date format
	* Allow compilation against LibXL 3.5.3
	* Fixed bug with parameter order inside setNamedRange method (jacksonja)

[2012-12-31] - Version 0.9.8
	* Allow compilation against LibXL 3.4
	* Updated addPictureScaled() and addPictureDim() to support optional x/y offset parameters

[2012-10-16] - Version 0.9.7
	* Updated INFO section of the extension to show libXL version
	* Added new methods (requires LibXL 3.2.4+):
		- added ExcelSheet::getTopLeftView() and ExcelSheet::setTopLeftView() methods for getting/setting a view position in the sheet
		- added ExcelSheet::addrToRowCol() and ExcelSheet::rowColToAddr() methods for translating Excel cell position to row/column definitions

[2011-10-12] - Version 0.9.6
	* Added new methods (requires LibXL 3.2.3+):